we have done with operator and control flow

--- a/PythonBasics/PythonControlFlow&Operator.ipynb
+++ b/PythonBasics/PythonControlFlow&Operator.ipynb
@@ -17,14 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is odd number\n"
+      "20 is even number\n",
+      "4 is the even number 20\n"
      ]
     }
    ],
@@ -32,14 +33,46 @@
     "#1. if else\n",
     "n = int(input(\"Enter the number\"))\n",
     "if n%2 == 0:\n",
-    "    print(f\"{n} is even number\")\n",
+    "    str_message = n,\"this is the even number\"\n",
+    "    print(f\"{n} is even number\") # this is the new version\n",
+    "    print(n,\" is the even number\")\n",
+    "    print(\"{1} is the even number {0}\".format(n,4))\n",
     "else:\n",
     "    print(f\"{n} is odd number\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str_message = f\"{n} this is the even number\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20 this is the even number'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str_message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -59,12 +92,12 @@
     "elif  18 <= int(n) <  60:\n",
     "    print(f\"Adult\")\n",
     "else:\n",
-    "    print(\"Senior Citizen\")"
+    "    print(\"Senior Citizen\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -116,23 +149,24 @@
    ],
    "source": [
     "i=1\n",
-    "while True:\n",
+    "while 1:\n",
     "    print(i)\n",
     "    i+=1\n",
+    "\n",
     "    if i==10:\n",
     "        break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saturday\n"
+      "Invalid input\n"
      ]
     }
    ],
@@ -147,12 +181,29 @@
     "    case 5: print( \"Friday\")\n",
     "    case 6: print( \"Saturday\")\n",
     "    case 7: print (\"Sunday\") \n",
-    "    case _ : print (\"Invalid input\")"
+    "    case _ : print (\"Invalid input\")\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "if n == 1:\n",
+    "print(\"Sunday)\n",
+    "elif n==2:\n",
+    "print(\"monday)\n",
+    "elif n==3:\n",
+    "print(\"tuesday\")\n",
+    "..\n",
+    "..\n",
+    "elif n==7:\n",
+    "print(\"satruarday\")\n",
+    "else:\n",
+    "print)\"invalid  number\"\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -198,26 +249,45 @@
     "\n",
     "\n",
     "## Assignment Operators\n",
-    "x += y  # Equivalent to x = x + y\n",
+    "x += y  # Equivalent to x = x + y --- x = 10+3 -> 13\n",
     "print(x)  \n",
     "\n",
-    "x -= y  # Equivalent to x = x - y\n",
+    "x -= y  # Equivalent to x = x - y ---x = 13-3 -> 10\n",
     "print(x)  \n",
     "\n",
-    "x *= y  # Equivalent to x = x * y\n",
+    "x *= y  # Equivalent to x = x * y --->x =  10*3 -> 30\n",
     "print(x)  \n",
     "\n",
-    "x /= y  # Equivalent to x = x / y\n",
+    "x /= y  # Equivalent to x = x / y --->x  = 10/3 -> 3.3333333333\n",
+    "\n",
     "print(x)  \n",
     "\n",
-    "x //= y  # Equivalent to x = x // y\n",
+    "x //= y  # Equivalent to x = x // y --->x= 10//3 -> 3\n",
     "print(x)  \n",
     "\n",
-    "x %= y  # Equivalent to x = x % y\n",
+    "x %= y  # Equivalent to x = x % y ----x=3%3=0\n",
     "print(x)  \n",
     "\n",
-    "x **= y  # Equivalent to x = x ** y\n",
+    "x **= y  # Equivalent to x = x ** y  ---->x= 0**3 -> 0\n",
     "print(x)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x %= y  # Equivalent to x = x % y\n",
+    "print(x)"
    ]
   },
   {
@@ -257,7 +327,7 @@
     "print()\n",
     "\n",
     "## logical Operators\n",
-    "print(x and y)  \n",
+    "print(x and y)  ----->1010      0011\n",
     "print(x or y)  \n",
     "print(not x)  "
    ]
@@ -327,13 +397,13 @@
    ],
    "source": [
     "##Bitwise Operators\n",
-    "x = 10  # Binary: 1010\n",
-    "y = 3  # Binary: 0011\n",
+    "x = 10  # Binary: 1010->101000\n",
+    "y = 3  # Binary: 0011 == 0010\n",
     "\n",
     "print(x & y)  # Output: 2 (Binary: 0010)\n",
     "print(x | y)  # Output: 11 (Binary: 1011)\n",
     "print(x ^ y)  # Output: 9 (Binary: 1001)\n",
-    "print(~x)  # Output: -11 (Binary: 11111111111111111111111111110101)\n",
+    "print(~x)  # Output: -11 (Binary:1011)\n",
     "print(x << 2)  # Output: 40 (Binary: 101000)\n",
     "print(x >> 2)  # Output: 2 (Binary: 10)"
    ]
